--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,30 @@
 Package: micromap
-Version: 1.6
-Date: 2013-05-31
+Version: 1.7
+Date: 2014-01-10
 Title: Linked Micromap Plots
-Authors@R: c(person("Quinn", "Payton", role="aut", email =
-        "Payton.Quinn@epa.gov"), person("Tony", "Olsen", role="aut",
-        email = "Olsen.Tony@epa.gov"), person("Marc", "Weber",
-        role="ctb", email = "Weber.Marc@epa.gov"), person("Michael",
-        "McManus", role="ctb", email = "McManus.Michael@epa.gov"),
-        person("Tom", "Kincaid", role="cre", email =
-        "Kincaid.Tom@epa.gov"))
-Author: Quinn Payton <Payton.Quinn@epa.gov> and Tony Olsen
-        <Olsen.Tony@epa.gov> with contributions from Marc Weber,
-        Michael McManus, and Tom Kincaid
-Maintainer: Tom Kincaid <Kincaid.Tom@epa.gov>
-Depends: R (>= 2.10), ggplot2, RColorBrewer, rgdal, grid
+Authors@R: c(person("Quinn", "Payton", role="aut",
+                    email = "Payton.Quinn@epa.gov"),
+             person("Tony", "Olsen",  role="aut",
+                    email = "Olsen.Tony@epa.gov"),
+             person("Marc", "Weber",  role="ctb",
+                    email = "Weber.Marc@epa.gov"),
+             person("Michael", "McManus",  role="ctb",
+                    email = "McManus.Michael@epa.gov"),
+             person("Tom", "Kincaid", role="cre",
+                    email = "Kincaid.Tom@epa.gov"))
+Depends: R (>= 2.10), ggplot2, maptools, RColorBrewer, rgdal, grid
 ByteCompile: yes
-Description: This group of functions simplifies the creation of linked
-        micromap plots.
+Description: This group of functions simplifies the creation of linked micromap
+  plots.
 License: GPL (>= 2)
 URL: http://www.epa.gov/nheerl/arm/
-Packaged: 2013-05-31 19:11:57 UTC; tkincaid
+Packaged: 2014-01-11 00:04:59 UTC; tkincaid
+Author: Quinn Payton [aut],
+  Tony Olsen [aut],
+  Marc Weber [ctb],
+  Michael McManus [ctb],
+  Tom Kincaid [cre]
+Maintainer: Tom Kincaid <Kincaid.Tom@epa.gov>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-05-31 23:03:40
+Date/Publication: 2014-01-11 06:42:21
