--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,12 @@
 # Export all names
 exportPattern(".")
 
-# Import all packages listed as Depends
-import(
-  ggplot2,
-  maptools,
-  RColorBrewer,
-  rgdal,
-  grid
-)
+# Import all packages listed as Depends or Imports
+import(sp)
+import(ggplot2)
+import(grid)
+import(maptools)
+import(RColorBrewer)
+import(rgdal)
+
+S3method(print, mm)
