--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: micromap
-Version: 1.9.1
-Date: 2015-01-23
+Version: 1.9.2
+Date: 2015-02-06
 Title: Linked Micromap Plots
 Authors@R: c(person("Quinn", "Payton", role="aut",
                     email = "Payton.Quinn@epa.gov"),
@@ -12,13 +12,13 @@ Authors@R: c(person("Quinn", "Payton", role="aut",
                     email = "McManus.Michael@epa.gov"),
              person("Tom", "Kincaid", role=c("cre", "ctb"),
                     email = "Kincaid.Tom@epa.gov"))
-Depends: R (>= 2.10), sp
-Imports: ggplot2, grid, maptools, RColorBrewer, rgdal
+Depends: R (>= 2.10), maptools, RColorBrewer, rgdal, sp
+Imports: ggplot2, grid
 Description: This group of functions simplifies the creation of linked micromap
     plots.
 License: GPL (>= 2)
 URL: http://www.jstatsoft.org/v63/i02/
-Packaged: 2015-01-23 22:22:56 UTC; tkincaid
+Packaged: 2015-02-06 16:52:58 UTC; tkincaid
 Author: Quinn Payton [aut],
   Tony Olsen [aut],
   Marc Weber [ctb],
@@ -27,4 +27,4 @@ Author: Quinn Payton [aut],
 Maintainer: Tom Kincaid <Kincaid.Tom@epa.gov>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-01-26 21:39:11
+Date/Publication: 2015-02-06 21:22:27
